discussion/kv_engine/163189/163189_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Move VBucket (in-mem) purgeSeqno update to PurgedItemContext

Add a new PurgedItemContext (MagmaImplicitCompactionPurgedItemContext)
so that we can pull out the implicit compaction specific logic to update
the VBucket purge seqno from compactionCore and instead update it via
purgedItem/updateRollbackPurgeSeqno.

Change-Id: Ie3b280ced3583f830e68366c8eb6e3d7b4b03bf6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-11 15:02:46.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-11 15:25:58.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34893/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34893/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41041/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(324): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41041/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13395/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_purged_item_context.h:23:18: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual void updateRollbackPurgeSeqno(uint64_t seqno) override {
    ~~~~~~~~     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13395/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3078/ : FAILURE

Compile error at [2021-10-11T15:08:54.141Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3078/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14159/ : FAILURE

Compile error at [2021-10-11T15:04:58.164Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3028/ : FAILURE

Compile error at [2021-10-11T15:14:44.100Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3028/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15895/ : FAILURE

Compile error at [2021-10-11T15:19:19.214Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15895/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15279/ : FAILURE

Compile error at [2021-10-11T15:18:54.025Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:324:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15279/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23311/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12182/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15006/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
